--- a/portfolio.html
+++ b/portfolio.html
@@ -17,11 +17,23 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Penguin</title>
+    <title>Portfolio of Farm</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
   <body>
-    
+    <nav id="navbar">
+        <a href="#welcome-section">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <section id="welcome-section">
+        <h1 class="intro">Hi, my name is Farm</h1>
+        <h3 class="intro">I'm a developer</h3>
+    </section>
+    <section id="projects">
+        <div class="project-tile"></div> <!--US #5-->
+    </section>
+    <section id="contact"></section> <!--US #8-->
   </body>
 </html>
