completed shell of welcome-section

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,9 @@
         <h3 class="intro">I'm a developer</h3>
     </section>
     <section id="projects">
-        <div class="project-tile"></div> <!--US #5-->
+        <div class="project-tile">
+            project 1
+        </div> <!--US #5-->
     </section>
     <section id="contact"></section> <!--US #8-->
   </body>
