--- a/portfolio.html
+++ b/portfolio.html
@@ -32,9 +32,18 @@
         <h3 class="intro">I'm a developer</h3>
     </section>
     <section id="projects">
-        <div class="project-tile">
-            project 1
-        </div> <!--US #5-->
+        <h1>Below are some of my projects</h1>
+        <div class="project-tiles"> <!--US #5-->
+            <div class="project-tile">
+                project 1
+            </div> 
+            <div class="project-tile">
+                project 2
+            </div>
+            <div class="project-tile">
+                project 3
+            </div>
+        </div>
     </section>
     <section id="contact"></section> <!--US #8-->
   </body>
