created shell for contact

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    />
     <title>Portfolio of Farm</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
@@ -28,8 +32,8 @@
         <a href="#contact">Contact</a>
     </nav>
     <section id="welcome-section">
-        <h1 class="intro">Hi, my name is Farm</h1>
-        <h3 class="intro">I'm a developer</h3>
+        <h1>Hi, my name is Farm</h1>
+        <h3>I'm a developer</h3>
     </section>
     <section id="projects">
         <h1>Below are some of my projects</h1>
@@ -45,6 +49,27 @@
             </div>
         </div>
     </section>
-    <section id="contact"></section> <!--US #8-->
+    <section id="contact">
+        <h1>I'm open to new positions</h1>
+        <h3>Contact me</h3>
+        <div class="platforms">
+            <div>
+                <a href="https://github.com/FarmZH98" target="_blank">
+                    <i class="fab fa-github"> GitHub </i>
+                </a>
+            </div>
+            <div>
+                <a href="/cdn-cgi/l/email-protection#89ecf1e8e4f9e5ecc9ecf1e8e4f9e5eca7eae6e4" target="_blank">
+                    <i class="fas fa-at"></i> Send me an email
+                </a>     
+            </div>
+            <div>
+                <a href="https://www.linkedin.com/in/zheng-hao-farm-324b92152/" target="_blank">
+                    <i class="fab fa-linkedin"></i> LinkedIn
+                </a>  
+                
+            </div>
+        </div>
+    </section> <!--US #8-->
   </body>
 </html>
