--- a/portfolio.html
+++ b/portfolio.html
@@ -1,16 +1,10 @@
 <!-- User Stories:
 
-1. Your portfolio should have a welcome section with an id of welcome-section
-2. The welcome section should have an h1 element that contains text
+
 3. Your portfolio should have a projects section with an id of projects
-4. The projects section should contain at least one element with a class of project-tile to hold a project
 5. The projects section should contain at least one link to a project
-6. Your portfolio should have a navbar with an id of navbar
-7. The navbar should contain at least one link that you can click on to navigate to different sections of the page
-8. Your portfolio should have a link with an id of profile-link, which opens your GitHub or freeCodeCamp profile in a new tab
 9. Your portfolio should have at least one media query
-10. The height of the welcome section should be equal to the height of the viewport
-11. The navbar should always be at the top of the viewport -->
+ -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -39,37 +33,48 @@
         <h1>Below are some of my projects</h1>
         <div class="project-tiles"> <!--US #5-->
             <div class="project-tile">
-                project 1
+                <a href="https://codepen.io/FarmZH98/pen/PoxqMEO" target="_blank">
+                    <img id="ProductPage" src="ProductPage.png"></img>          
+                </a>
+                <p>Product Landing Page</p>
             </div> 
             <div class="project-tile">
-                project 2
+                <a href="https://codepen.io/FarmZH98/pen/poQJMaq" target="_blank">
+                    <img id="DocumentationPage" src="DocumentationPage.png"></img>          
+                </a>
+                <p>Documentation Page</p>
             </div>
             <div class="project-tile">
-                project 3
+                <a href="https://codepen.io/FarmZH98/pen/qBQdeYZ" target="_blank">
+                    <img id="Form" src="Form.png"></img>          
+                </a>
+                <p>Survey Form</p>
             </div>
         </div>
     </section>
     <section id="contact">
-        <h1>I'm open to new positions</h1>
-        <h3>Contact me</h3>
+        <h1>I'm open to new positions!</h1>
+        <h3>Contact me:</h3>
         <div class="platforms">
             <div>
                 <a href="https://github.com/FarmZH98" target="_blank">
-                    <i class="fab fa-github"> GitHub </i>
+                    <i class="fab fa-github fa-2x"> GitHub </i>
                 </a>
             </div>
             <div>
                 <a href="/cdn-cgi/l/email-protection#89ecf1e8e4f9e5ecc9ecf1e8e4f9e5eca7eae6e4" target="_blank">
-                    <i class="fas fa-at"></i> Send me an email
+                    <i class="fas fa-at fa-2x">Send me an email</i> 
                 </a>     
             </div>
             <div>
                 <a href="https://www.linkedin.com/in/zheng-hao-farm-324b92152/" target="_blank">
-                    <i class="fab fa-linkedin"></i> LinkedIn
+                    <i class="fab fa-linkedin fa-2x">LinkedIn</i> 
                 </a>  
-                
             </div>
         </div>
-    </section> <!--US #8-->
+        <footer>
+            <p>My biggest stength: fast learner, and love a good challenge.</p>
+        </footer>
+    </section>
   </body>
 </html>
