--- a/portfolio.html
+++ b/portfolio.html
@@ -36,19 +36,19 @@
                 <a href="https://codepen.io/FarmZH98/pen/PoxqMEO" target="_blank">
                     <img id="ProductPage" src="ProductPage.png"></img>          
                 </a>
-                <p>Product Landing Page</p>
+                <a href="https://codepen.io/FarmZH98/pen/PoxqMEO" target="_blank"><p>Product Landing Page</p></a>
             </div> 
             <div class="project-tile">
                 <a href="https://codepen.io/FarmZH98/pen/poQJMaq" target="_blank">
                     <img id="DocumentationPage" src="DocumentationPage.png"></img>          
                 </a>
-                <p>Documentation Page</p>
+                <a href="https://codepen.io/FarmZH98/pen/poQJMaq" target="_blank"><p>Documentation Page</p></a>
             </div>
             <div class="project-tile">
                 <a href="https://codepen.io/FarmZH98/pen/qBQdeYZ" target="_blank">
                     <img id="Form" src="Form.png"></img>          
                 </a>
-                <p>Survey Form</p>
+                <a href="https://codepen.io/FarmZH98/pen/qBQdeYZ" target="_blank"><p>Survey Form</p></a>
             </div>
         </div>
     </section>
