--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,3 @@
-<!-- User Stories:
-
-
-3. Your portfolio should have a projects section with an id of projects
-5. The projects section should contain at least one link to a project
-9. Your portfolio should have at least one media query
- -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -34,19 +26,19 @@
         <div class="project-tiles"> <!--US #5-->
             <div class="project-tile">
                 <a href="https://codepen.io/FarmZH98/pen/PoxqMEO" target="_blank">
-                    <img id="ProductPage" src="ProductPage.png"></img>          
+                    <img id="ProductPage" src="ProductPage.png" alt="Product Page"></img>          
                 </a>
-                <a href="https://codepen.io/FarmZH98/pen/PoxqMEO" target="_blank"><p>Product Landing Page</p></a>
+                <a href="https://codepen.io/FarmZH98/pen/PoxqMEO" id="profile-link" target="_blank"><p>Product Landing Page</p></a>
             </div> 
             <div class="project-tile">
-                <a href="https://codepen.io/FarmZH98/pen/poQJMaq" target="_blank">
-                    <img id="DocumentationPage" src="DocumentationPage.png"></img>          
+                <a href="https://codepen.io/FarmZH98/pen/poQJMaq" id="profile-link" target="_blank">
+                    <img id="DocumentationPage" src="DocumentationPage.png" alt="Documentation Page"></img>          
                 </a>
                 <a href="https://codepen.io/FarmZH98/pen/poQJMaq" target="_blank"><p>Documentation Page</p></a>
             </div>
             <div class="project-tile">
-                <a href="https://codepen.io/FarmZH98/pen/qBQdeYZ" target="_blank">
-                    <img id="Form" src="Form.png"></img>          
+                <a href="https://codepen.io/FarmZH98/pen/qBQdeYZ" id="profile-link"a target="_blank">
+                    <img id="Form" src="Form.png" alt="Form"></img>          
                 </a>
                 <a href="https://codepen.io/FarmZH98/pen/qBQdeYZ" target="_blank"><p>Survey Form</p></a>
             </div>
